show chat on contact us click

--- a/packages/amplication-client/src/hubSpotChat.scss
+++ b/packages/amplication-client/src/hubSpotChat.scss
@@ -7,6 +7,7 @@
   border: transparent;
   box-shadow: 0 5px 20px rgb(0 0 0 / 10%);
   height: 530px;
+  z-index: 2000;
 }
 
 #hubspot-conversations-inline-iframe {
