Add logic to show form and text for project name

--- a/packages/amplication-client/src/Resource/ResourceHome.scss
+++ b/packages/amplication-client/src/Resource/ResourceHome.scss
@@ -29,6 +29,10 @@ $circle-badge-border: 2px;
     justify-content: center;
   }
 
+  &__header-text:hover {
+    cursor: pointer;
+  }
+
   .circle-badge {
     width: $application-badge-size-large;
     height: $application-badge-size-large;
