--- a/packages/amplication-client/src/User/GitHubLoginButton.scss
+++ b/packages/amplication-client/src/User/GitHubLoginButton.scss
@@ -5,6 +5,7 @@ $icon-font-size: 24px;
 
 .github-login-button {
   .amp-button {
+    margin-top: 0;
     height: $button-height;
     i {
       font-size: $icon-font-size;
