feat(client): reduce the entity field search width

--- a/packages/amplication-client/src/Entity/EntityFieldList.scss
+++ b/packages/amplication-client/src/Entity/EntityFieldList.scss
@@ -4,7 +4,7 @@
   &__header {
     @include flexFullRowWithSpacing;
     margin-bottom: var(--large-spacing);
-
+    width: 220px;
     .search-field {
       flex: 1;
     }
