fix(client): changed flex to flex-end

--- a/packages/amplication-client/src/Profile/ProfileForm.scss
+++ b/packages/amplication-client/src/Profile/ProfileForm.scss
@@ -19,7 +19,7 @@
 
   &__submitButton {
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     .amp-button {
       width: auto;
     }
