--- a/packages/amplication-design-system/src/style/css-variables.scss
+++ b/packages/amplication-design-system/src/style/css-variables.scss
@@ -119,6 +119,7 @@
 
   --default-border-radius: 8px;
   --small-border-radius: 4px;
+  --xxlarge-border-radius: 35px;
   --scrollbar-radius: 20px;
   --form-elements-border-radius: var(--default-border-radius);
   --form-permission-type-radius: var(--small-border-radius);
