--- a/packages/amplication-client/src/Resource/create-resource/wizard-pages/CreateServiceWelcome.scss
+++ b/packages/amplication-client/src/Resource/create-resource/wizard-pages/CreateServiceWelcome.scss
@@ -4,7 +4,12 @@
 $max-width: 700px;
 
 .create-service-welcome {
-  height: 30%;
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+
+  align-items: center;
+  justify-content: center;
 
   &__welcome {
     display: flex;
