fix:ui issue solved and sync with deaign system

--- a/packages/amplication-client/src/Layout/PageContent.scss
+++ b/packages/amplication-client/src/Layout/PageContent.scss
@@ -6,7 +6,7 @@ $tabs-width: 300px;
   display: flex;
   flex: 1;
   gap: var(--large-spacing);
-  padding: var(--large-spacing) 0 var(--large-spacing) var(--large-spacing);
+  padding: var(--large-spacing) 0 var(--large-spacing) var(--double-spacing);
   background: var(--page-content-background);
   box-sizing: border-box;
   overflow: hidden;
