--- a/packages/amplication-client/src/Resource/git/GitActions/RepositoryActions/RepositoryActions.scss
+++ b/packages/amplication-client/src/Resource/git/GitActions/RepositoryActions/RepositoryActions.scss
@@ -6,7 +6,7 @@
 
 .repository-actions {
   &__auth {
-    margin: var(--double-spacing) 0;
+    margin: var(--medium-spacing) 0;
     min-height: var(--min-height-of-banner);
     display: flex;
     background: var(--black10);
