--- a/packages/amplication-client/src/Resource/git/ProjectConfigurationGitSettings.scss
+++ b/packages/amplication-client/src/Resource/git/ProjectConfigurationGitSettings.scss
@@ -26,7 +26,7 @@
     height: 72px;
     border: $border-black20;
     background: var(--black5);
-    margin: 8px 0;
+    margin: 0;
     min-height: var(--min-height-of-banner);
     display: flex;
   }
