--- a/packages/amplication-client/src/Resource/git/ServiceConfigurationGitSettings.scss
+++ b/packages/amplication-client/src/Resource/git/ServiceConfigurationGitSettings.scss
@@ -7,7 +7,7 @@
   gap: 24px;
   width: 100%;
   height: 475px;
-  margin: var(--double-spacing) 0;
+  margin: var(--medium-spacing) 0;
 
   &__panelWarper {
     display: flex;
@@ -20,7 +20,7 @@
 
   &__gitSettingsPanel {
     padding: 12px 16px;
-    gap: 12px;
+    gap: 0px;
     width: 100%;
     background: var(--black5);
     border-radius: var(--default-border-radius);
