created selector component, used it in pages

--- a/packages/amplication-client/src/Resource/create-resource/wizard-pages/IconLabelToggle.scss
+++ b/packages/amplication-client/src/Resource/create-resource/wizard-pages/IconLabelToggle.scss
@@ -1,6 +1,6 @@
 @import "../../../style/index.scss";
 
-.icon-description-toggle {
+.icon-label-toggle {
   display: flex;
   flex: 1;
   flex-direction: column;
