--- a/packages/amplication-client/src/Resource/create-resource/CreateServiceWizardLayout.scss
+++ b/packages/amplication-client/src/Resource/create-resource/CreateServiceWizardLayout.scss
@@ -15,7 +15,7 @@
     flex: 1;
     flex-direction: column;
     justify-content: center;
-    padding: 100px;
+    padding: 6%;
     //It might be the case, that Alex wanted main block been centered, but there is padding 100px in Figma
     // align-items: center;
   }
@@ -42,5 +42,15 @@
     &__paragraph {
       @include regular-14;
     }
+  }
+
+  &__selector_wrapper {
+    flex: 1;
+    display: flex;
+    flex-wrap: wrap;
+    align-content: center;
+    justify-content: center;
+
+    gap: var(--large-spacing);
   }
 }
